[package]
name = "http-link"
version = "1.0.0"
authors = ["axion014 <axion014@gmail.com>"]
edition = "2018"
description = "naive implementation of https://tools.ietf.org/html/rfc8288#appendix-B.2 for parsing HTTP Link header value"
license ="MIT"

[dependencies]

percent-encoding = "2.1.0"
url = "2.1.1"